header, main and footer distibution

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Juan Rodriguez CV</title>
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
